--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Countdown to Otakon</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages1.</p>
+  <h1>Countdown to Otakon</h1>
+  <div id="countdown"></div>
+  <script>
+    const targetDate = new Date('August 7, 2025 00:00:00').getTime();
+    const countdownElement = document.getElementById('countdown');
+    function updateCountdown() {
+      const currentTime = new Date().getTime();
+      const timeLeft = targetDate - currentTime;
+      const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+      countdownElement.innerHTML = `${days} days, ${hours} hours, ${minutes} minutes, ${seconds} seconds`;
+      if (timeLeft < 0) {
+        countdownElement.innerHTML = 'Countdown finished!';
+      }
+    }
+    setInterval(updateCountdown, 1000);
+    updateCountdown();
+  </script>
 </body>
 </html>
