--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div id="countdown-container">
     <h1>Countdown to Otakon 2025</h1>
-    <img id="otakon-logo" src="https://d2j6dbq0eux0bg.cloudfront.net/images/40756394/4068687706.png                                            
+    <img id="otakon-logo" src="https://                                       
     <div id="countdown"></div>
   </div>
   <script>
