--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+    #link {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
   <div id="countdown-container">
     <h1>Countdown to Otakon 2025</h1>
     <div id="countdown"></div>
+    <div id="link">
+      <a href="https://www.otakon.com/" target="_blank">Otakon</a>
+    </div>
   </div>
   <script>
     const targetDate = new Date('August 7, 2025 00:00:00').getTime();
